# MQTTC_UET

./: CMakeLists.txt  README.md  cmakeBuild.txt  commit.txt
server/: test.c
src/auto/: autopub.c
src/client/: client.c
src/server/: server.c
